--- a/backend/package.json
+++ b/backend/package.json
@@ -8,27 +8,42 @@
   "engines": {
     "node": "16.x.x"
   },
+  "watch": {
+    "start": {
+      "ignore": [
+        "index.js",
+        "node_modules"
+      ],
+      "extensions": "ts",
+      "patterns": [
+        "."
+      ]
+    }
+  },
   "scripts": {
     "prepare": "npm run gcp-build",
     "pretest": "npm run gcp-build",
     "test": "mocha test/*.test.js --exit",
     "posttest": "npm run lint",
     "lint": "tslint -p .",
-    "start": "node ./index.js",
+    "start": "npm run prepare && node ./index.js",
     "gcp-build": "tsc -p .",
-    "deploy": "gcloud app deploy"
+    "deploy": "gcloud app deploy",
+    "watch": "npm-watch"
   },
   "dependencies": {
     "@types/node": "^14.14.7",
     "express": "^4.16.3",
+    "firebase": "^9.12.1",
     "typescript": "^4.0.0"
   },
   "devDependencies": {
-    "mocha": "^9.0.0",
-    "wait-port": "^0.3.0",
     "@types/express": "^4.16.0",
     "chai": "^4.2.0",
+    "mocha": "^9.0.0",
+    "npm-watch": "^0.11.0",
     "tslint": "^6.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "wait-port": "^0.3.0"
   }
 }
