--- a/backend/package.json
+++ b/backend/package.json
@@ -33,12 +33,14 @@
   },
   "dependencies": {
     "@types/node": "^14.14.7",
+    "dotenv": "^16.0.3",
     "express": "^4.16.3",
-    "firebase": "^9.12.1",
+    "firebase-admin": "^11.1.0",
     "typescript": "^4.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
     "chai": "^4.2.0",
     "mocha": "^9.0.0",
     "npm-watch": "^0.11.0",
