--- a/backend/package.json
+++ b/backend/package.json
@@ -8,28 +8,15 @@
   "engines": {
     "node": "16.x.x"
   },
-  "watch": {
-    "start": {
-      "ignore": [
-        "index.js",
-        "node_modules"
-      ],
-      "extensions": "ts",
-      "patterns": [
-        "."
-      ]
-    }
-  },
   "scripts": {
     "prepare": "npm run gcp-build",
     "pretest": "npm run gcp-build",
     "test": "mocha test/*.test.js --exit",
     "posttest": "npm run lint",
     "lint": "tslint -p .",
-    "start": "npm run prepare && node ./index.js",
+    "start": "node ./index.js",
     "gcp-build": "tsc -p .",
-    "deploy": "gcloud app deploy",
-    "watch": "npm-watch"
+    "deploy": "gcloud app deploy"
   },
   "dependencies": {
     "@types/node": "^14.14.7",
@@ -39,13 +26,11 @@
     "typescript": "^4.0.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.14",
-    "chai": "^4.2.0",
     "mocha": "^9.0.0",
-    "npm-watch": "^0.11.0",
+    "wait-port": "^0.3.0",
+    "@types/express": "^4.16.0",
+    "chai": "^4.2.0",
     "tslint": "^6.0.0",
-    "typescript": "^4.0.0",
-    "wait-port": "^0.3.0"
+    "typescript": "^4.0.0"
   }
 }
