--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "merge-class-names": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-event-observer": "^0.5.11",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
