--- a/backend/package.json
+++ b/backend/package.json
@@ -20,17 +20,18 @@
   },
   "dependencies": {
     "@types/node": "^14.14.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.16.3",
     "firebase-admin": "^11.1.0",
     "typescript": "^4.0.0"
   },
   "devDependencies": {
-    "mocha": "^9.0.0",
-    "wait-port": "^0.3.0",
     "@types/express": "^4.16.0",
     "chai": "^4.2.0",
+    "mocha": "^9.0.0",
     "tslint": "^6.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "wait-port": "^0.3.0"
   }
 }
